Bug 507368 - "Share" feature is not working
Summary: "Share" feature is not working
Status: RESOLVED FIXED
Alias: None
Product: plasma-browser-integration
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-22 15:34 UTC by Patrick Silva
Modified: 2025-07-25 10:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2025-07-22 15:34:37 UTC
SUMMARY
Can reproduce with Firefox and Vivaldi.

STEPS TO REPRODUCE
1. install Plasma Integration extension/addon for your browser
2. right-click on any webpage
3. hover over "Plasma integration" and choose "Share..."

OBSERVED RESULT
nothing happens

EXPECTED RESULT
"Share" feature works

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2025-07-25 08:12:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-browser-integration/-/merge_requests/153
Comment 2 Kai Uwe Broulik 2025-07-25 09:43:09 UTC
Git commit 12abad911b1f2e268885de0e705dea5bc6f8b08d by Kai Uwe Broulik.
Committed on 25/07/2025 at 08:11.
Pushed by broulik into branch 'master'.

Purpose: Make AlternativesMenu a regular window

A popup window must have a proper parent but we cannot attach it to
the browser window, so let's just make it a regular menu.

Recent Qt Wayland no longer shows the window in this case at all,
breaking the share menu.

M  +9    -0    host/purposeplugin.cpp

https://invent.kde.org/plasma/plasma-browser-integration/-/commit/12abad911b1f2e268885de0e705dea5bc6f8b08d
Comment 3 Kai Uwe Broulik 2025-07-25 09:46:42 UTC
Git commit 8e9d70eb6eafbc459805989ebefc0d34f585e84c by Kai Uwe Broulik.
Committed on 25/07/2025 at 09:43.
Pushed by broulik into branch 'Plasma/6.4'.

Purpose: Make AlternativesMenu a regular window

A popup window must have a proper parent but we cannot attach it to
the browser window, so let's just make it a regular menu.

Recent Qt Wayland no longer shows the window in this case at all,
breaking the share menu.


(cherry picked from commit 12abad911b1f2e268885de0e705dea5bc6f8b08d)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>

M  +9    -0    host/purposeplugin.cpp

https://invent.kde.org/plasma/plasma-browser-integration/-/commit/8e9d70eb6eafbc459805989ebefc0d34f585e84c