Purpose: Make AlternativesMenu a regular window

A popup window must have a proper parent but we cannot attach it to
the browser window, so let's just make it a regular menu.

Recent Qt Wayland no longer shows the window in this case at all,
breaking the share menu.

BUG: 507368


(cherry picked from commit 12abad911b1f2e268885de0e705dea5bc6f8b08d)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>